Fix mobile horizontal scrolling

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -225,3 +225,7 @@ pre {
     }
   }
 }
+
+.equation {
+  overflow-x: scroll;
+}
